[gd_scene load_steps=5 format=3 uid="uid://d1p1pb63giobb"]

[ext_resource type="Script" path="res://Scenes/SessionResults/session_results.gd" id="1_xapid"]
[ext_resource type="Theme" uid="uid://cogqr3ns3qw04" path="res://Styles/main_theme.tres" id="2_5a403"]
[ext_resource type="Theme" uid="uid://l7rc3qcn8tai" path="res://Styles/letter_trace_theme.tres" id="3_kj2ag"]
[ext_resource type="PackedScene" uid="uid://diyqbmhu4pj5t" path="res://Scenes/SessionResults/celebration_animation.tscn" id="4_ybu0p"]

[node name="SessionResults" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xapid")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IncorrectProblems" type="VBoxContainer" parent="HBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer2/IncorrectProblems"]
layout_mode = 2
theme = ExtResource("2_5a403")
text = "You got every 
questions right! 
Hooray!"

[node name="Label2" type="Label" parent="HBoxContainer/CenterContainer2/IncorrectProblems"]
visible = false
layout_mode = 2
theme = ExtResource("2_5a403")
text = "incorrect problems:"

[node name="CenterContainer1" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CenterContainer1"]
layout_mode = 2

[node name="TotalCoinsEarned" type="Label" parent="HBoxContainer/CenterContainer1/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_kj2ag")
text = "50"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/CenterContainer1/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer1/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_5a403")
theme_override_colors/font_color = Color(0, 0.890196, 0, 1)
text = "correct: "

[node name="NumCorrectAnswers" type="Label" parent="HBoxContainer/CenterContainer1/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_5a403")
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/CenterContainer1/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer1/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_5a403")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "incorrect: "

[node name="NumIncorrectAnswers" type="Label" parent="HBoxContainer/CenterContainer1/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_5a403")
text = "0"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="NavigationButtons" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="AgainButton" type="Button" parent="MarginContainer/NavigationButtons"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_5a403")
text = "Practice Again!"

[node name="MenuButton" type="Button" parent="MarginContainer/NavigationButtons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_5a403")
text = "Back to Menu"

[node name="CelebrationAnimation" parent="." instance=ExtResource("4_ybu0p")]

[connection signal="pressed" from="MarginContainer/NavigationButtons/AgainButton" to="." method="_on_again_button_pressed"]
[connection signal="pressed" from="MarginContainer/NavigationButtons/MenuButton" to="." method="_on_menu_button_pressed"]
